# burn-mnist

./: .gitignore  Cargo.toml  README.md
model2/: config.json
src/: data.rs  infer.rs  lib.rs  main.rs  model.rs  train.rs
